force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Autonum__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Autonum__c</fullName>
    <label>Autonum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>