force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Comment__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Comment__c</fullName>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>