force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__CompanyEdition_Date__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__CompanyEdition_Date__c</fullName>
    <description>Define the date of edition of the contract</description>
    <inlineHelpText>Précisez la date d&apos;édition du contrat</inlineHelpText>
    <label>Company Edition Date</label>
    <type>Date</type>
</CustomField>