force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__CompanySigned_By__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__CompanySigned_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reponsasible signing the contract for the company account</description>
    <inlineHelpText>Sélectionnez le signataire du contrat en interne</inlineHelpText>
    <label>Company Signed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>