force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Contract_BDate__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Contract_BDate__c</fullName>
    <defaultValue>DATE(YEAR(TODAY()),1,1)</defaultValue>
    <description>Start date of the contract</description>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>