force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Contract_BU__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Contract_BU__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Define the level that contract is negotiated and signed</description>
    <inlineHelpText>Précisez le niveau de négociation et de signature du contrat</inlineHelpText>
    <label>Coming from / Dealing by</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND ((2 AND 3) OR 4)</booleanFilter>
        <errorMessage>Contract_BU__c - Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Negoptim__Orga_BU__c.Negoptim__Set_Contract_BU_Target__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Negoptim__Orga_BU__c.Negoptim__Related_Client__c</field>
            <operation>equals</operation>
            <valueField>$Source.Negoptim__Supplier__c</valueField>
        </filterItems>
        <filterItems>
            <field>Negoptim__Orga_BU__c.Negoptim__Related_Client__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Negoptim__Orga_BU__c.Negoptim__Related_Client__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Negoptim__Orga_BU__c</referenceTo>
    <relationshipLabel>All contracts (Coming from / Dealing by)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>