force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Contract_MultiYearReference__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Contract_MultiYearReference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Multi Year Reference</label>
    <referenceTo>Negoptim__Contract__c</referenceTo>
    <relationshipLabel>All contracts (Contract Multi Year Reference)</relationshipLabel>
    <relationshipName>All_contracts</relationshipName>
    <type>Lookup</type>
</CustomField>