force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Contract_Number__c</fullName>
    <label>Contract Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>