force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__D_N__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__D_N__c</fullName>
    <description>Type of the contrat: Duplication (Prorogation) vs Negotiation</description>
    <label>D/N</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>