force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Depreciation_Rate1__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Depreciation_Rate1__c</fullName>
    <label>Depreciation Rate1</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>