force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Depreciation_Rate_Exec_Date1__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Depreciation_Rate_Exec_Date1__c</fullName>
    <label>Depreciation Rate Exec Date1</label>
    <type>Date</type>
</CustomField>