force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Depreciation_Rate_Exec_Date3__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Depreciation_Rate_Exec_Date3__c</fullName>
    <label>Depreciation Rate Exec Date3</label>
    <type>Date</type>
</CustomField>