force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Duration__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Duration__c</fullName>
    <defaultValue>12</defaultValue>
    <label>Duration (Number of months)</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>