force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Extraction_date_last__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Extraction_date_last__c</fullName>
    <description>Give the last extraction date for upsert of the line.</description>
    <inlineHelpText>Give the last extraction date for upsert of the line.</inlineHelpText>
    <label>Last Extraction date</label>
    <type>Date</type>
</CustomField>