force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__FlatPrice_Rate_Correction__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__FlatPrice_Rate_Correction__c</fullName>
    <label>FlatPrice Rate Correction</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>