force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__FlatPrice_Rate_Exec_Date__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__FlatPrice_Rate_Exec_Date__c</fullName>
    <label>FlatPrice Rate Exec Date</label>
    <type>Date</type>
</CustomField>