force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__FlatPrice_Rate_Promo__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__FlatPrice_Rate_Promo__c</fullName>
    <formula>Negoptim__Index2_perc__c + Negoptim__FlatPrice_Rate_Promo_Correction__c - Negoptim__Retention_Rate_Promo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FlatPrice Rate Promo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>