force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Index1_v2_perc__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Index1_v2_perc__c</fullName>
    <label>Index1 % v2</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>