force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Is_Foreign_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Is_Foreign_Supplier__c</fullName>
    <formula>IF( AND(NOT(ISNULL(Negoptim__Supplier_Nego_Scope__r.Negoptim__Acc_Global_Location__c)), UPPER(Negoptim__Contract_BU__r.Negoptim__Country__c) &lt;&gt; UPPER(Negoptim__Supplier_Nego_Scope__r.Negoptim__Acc_Global_Location__r.Negoptim__Orga_BU__r.Negoptim__Country__c)), TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Foreign Supplier</label>
    <type>Checkbox</type>
</CustomField>