force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Is_Managed_By_ExternalSource__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Is_Managed_By_ExternalSource__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Contract &amp; related are managed by an external system</description>
    <label>Is Managed By External Source</label>
    <type>Checkbox</type>
</CustomField>