force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Is_NetPrice_Statement_Requested__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Is_NetPrice_Statement_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check is starting the NetPrice Discount Statement Initialization process</description>
    <label>Is NetPrice Statement Requested</label>
    <type>Checkbox</type>
</CustomField>