force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Is_OnTop_Simulation__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Is_OnTop_Simulation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Simulation is the todate best representative step of nego progress</description>
    <label>Is OnTop Simulation</label>
    <type>Checkbox</type>
</CustomField>