force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__IsPriceWaterfallRequested__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__IsPriceWaterfallRequested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Price Waterfall Requested</label>
    <type>Checkbox</type>
</CustomField>