force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Markdown_Rate_Promo__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Markdown_Rate_Promo__c</fullName>
    <label>Markdown Rate (Promo)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>