force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Multi_Year_Total__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Multi_Year_Total__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Total number of years for multi year contract.</description>
    <label>Multi Year Total</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>