force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__New_TarifCost_Date__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__New_TarifCost_Date__c</fullName>
    <label>New Tarif Cost Exec. Date</label>
    <type>Date</type>
</CustomField>