force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Parent_Contract__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Parent_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent contract linked to the contract (in case of addendum for exemple)</description>
    <inlineHelpText>Parent contract linked to the contract (in case of addendum for exemple)</inlineHelpText>
    <label>Parent Contract</label>
    <referenceTo>Negoptim__Contract__c</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>