force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__PartnerConfirmed_By__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__PartnerConfirmed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Confirmed By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Contracts11</relationshipName>
    <type>Lookup</type>
</CustomField>