force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__PartnerConfirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__PartnerConfirmed_Date__c</fullName>
    <description>Define the date when partner is confirming the contract</description>
    <inlineHelpText>Précisez la date de validation fournisseur du contrat avant le process de signature</inlineHelpText>
    <label>Partner Confirmed Date</label>
    <type>Date</type>
</CustomField>