force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__PartnerSigned_By__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__PartnerSigned_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact signing the contract for the partner account</description>
    <inlineHelpText>Contact fournisseur signataire</inlineHelpText>
    <label>Partner Signed By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>