force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__PriceListStatement_DepreciationRate_Nam1__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__PriceListStatement_DepreciationRate_Nam1__c</fullName>
    <label>PriceListStatement DepreciationRate Nam1</label>
    <type>TextArea</type>
</CustomField>