force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__PriceListStatement_DepreciationRate_Name__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__PriceListStatement_DepreciationRate_Name__c</fullName>
    <label>PriceListStatement DepreciationRate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>