force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__PriceListStatement_RiseRate_Name1__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__PriceListStatement_RiseRate_Name1__c</fullName>
    <label>PriceListStatement RiseRate Name1</label>
    <type>TextArea</type>
</CustomField>