force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__PriceListStatement_RiseRate_Name2__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__PriceListStatement_RiseRate_Name2__c</fullName>
    <label>PriceListStatement RiseRate Name2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>