force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Qty12__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Qty12__c</fullName>
    <label>Qty12</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>