force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Reference_Year__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Reference_Year__c</fullName>
    <description>Automatically defined the reference year for the contract based on the beginig date of the contract</description>
    <formula>YEAR( Negoptim__Contract_BDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>