force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Retention_Rate_Promo__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Retention_Rate_Promo__c</fullName>
    <label>Retention Rate Promo</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>