force-app/main/default/objects/Negoptim__Contract__c/fields/Negoptim__Rise_Rate_Exec_Date2__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Rise_Rate_Exec_Date2__c</fullName>
    <label>Rise Rate Exec Date2</label>
    <type>Date</type>
</CustomField>